code review improvemetns